Cleanup and restructuring of Elegoo modifications for Neptune 3 Pro/Plus/Max
This includes:

    + renamed board / variant to match the actual board name of the Neptune 3 Pro/Plus/Max
    + fix variant.h by using PIN_Ax instead of Ax and re-enable sanity check to make
      sure auto fan pins don't conflict with fan pin (sanity check failed with Ax)
    + several minor modifications to reduce differences from upstream Marlin release
    + software version shown on screen set to '0.1.0p/+/m' (p=pro, +=plus, m=max)

--- a/ini/stm32f4.ini
+++ b/ini/stm32f4.ini
@@ -635,11 +635,11 @@ debug_tool                  = stlink
 upload_protocol             = stlink
 
 #
-# MKS-E3-V2 with STM32F401RC
+# ZNP Robin Nano DW V2.2 with STM32F401RC
 #
-[env:MKS_E3_V2]
+[env:ZNP_ROBIN_NANO_DW_V2_2]
 extends            = stm32_variant
-board              = marlin_MKS_F401RC
+board              = marlin_ZNP_ROBIN_NANO_DW_V2_2
 board_build.rename = ZNP_ROBIN_NANO.bin
 board_build.offset = 0x8000
 board_upload.offset_address = 0x08008000
