--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = MKS_E3_V2
+default_envs = ZNP_ROBIN_NANO_DW_V2_2
 include_dir  = Marlin
 extra_configs =
     Marlin/config.ini
